Cacti CHANGELOG

0.8.9
-feature: list all include/config.php parameters during install/upgrade to verify

0.8.8a
-bug#0002207: cannot export graph templates
-bug#0002208: Graphs with CDEFs fail to generate
-bug#0002209: External auth does not work behind a reverse proxy 
-bug#0002211: creating an index USING BTREE fails ony MySQL < 5.0.60
-bug#0002213: CLI upgrade script is missing 0.8.7i as a target
-bug#0002214: SQL error during non-PIA upgrade to 088 when giving a default for a text field in plugin_realms
-bug#0002216: use of define_syslog_variables() gone in PHP 5.4 
-bug#0002217: url_path should default to /cacti/
-bug#0002221: Missing plugin directory causes endless loop in plugins.php
-bug#0002222: tail_logfile hangs when cacti.log not readable, filling apache log with fgets warnings

0.8.8
-bug#0002056: un-initialized datetime used for host status (was: Zero length string != NULL) 
-bug#0002081: In Graph Management, search display graph title breaks when using pattern symbol "/"
-bug#0002132: need to include pa.sql with the 0.8.7i and future releases
-bug#0002134: rebuild_poller_cache.php --host-id deletes table poller_item completely
-bug#0002141: cacti.sql missing BTREE PRIMARY KEY for poller_output 
-bug#0002146: Utilities -> View Log File -> refresh does not work
-bug#0002150: usort_data_query_index() is broken -> graph order for hosts with data query sort option fails
-bug#0002151: When building HTML forms with sub_checkbox on_change parameter is not used 
-bug#0002152: Issue with filter on graphs_new.php
-bug#0002153: Cant search for patterns containing a forward-slash
-bug#0002156: CDEF strings are not escaped before passed to rrdtool command
-bug#0002158: Minor changes to grammar of displayed messages
-bug#0002165: Using data input field in data source name (related to 2079 in 0.8.7i)
-bug#0002167: New poller hook poller_finishing
-bug#0002172: structure_rra_paths.php does not handle disabled data sources